Agregado de caratulas para la carpeta de ejercicios (entrega 1)

--- a/carpetaDeEjercicios/caratulas/main.tex
+++ b/carpetaDeEjercicios/caratulas/main.tex
@@ -43,5 +43,8 @@
     \pagestyle{empty} 
     \newgeometry{left=0cm,right=0cm,top=0cm,bottom=0cm}
     \include{portadaUT1.tex}
+    \include{portadaUT2}
+    \include{portadaUT3}
+    \include{portadaUT4}
 \end{document}
 
