--- a/carpetaDeEjercicios/caratulas/portadaUT2.tex
+++ b/carpetaDeEjercicios/caratulas/portadaUT2.tex
@@ -6,7 +6,7 @@
         \node at (0cm, -3cm) {\includegraphics[width=2.5cm]{./imagenes/utn.png}};
         \node at (0cm, -5cm) {\Large\textbf{Universidad Tecnológica Nacional}};
         \node at (0cm, -6cm) {\Large\text{Facultad Regional de Córdoba}};
-        \node at (0cm, -14.5cm){\Huge\textbf{U.T. Nº1:} Espectro electromagnético};
+        \node at (0cm, -14.5cm){\Huge\textbf{U.T. Nº2:} Ecuaciones de Maxwell};
         \node at (0cm, -16cm) {
             \begin{minipage}[c]{12cm}
                 \begin{center} \huge \textit{Por Marcos Raúl Gatica} \end{center}
@@ -20,3 +20,5 @@
 
     \end{tikzpicture}
 \end{center}
+
+\newpage\text{}
