Agregado de nuevas caratulas

--- a/carpetaDeEjercicios/caratulas/main.tex
+++ b/carpetaDeEjercicios/caratulas/main.tex
@@ -46,5 +46,7 @@
     \include{portadaUT2}
     \include{portadaUT3}
     \include{portadaUT4}
+    \include{portadaUT5}
+    \include{portadaUT6}
 \end{document}
 
